CB-22238: Allow upgrade even if the source image is removed from the catalog
This commit contains the following changes:
- Extended the com.sequenceiq.cloudbreak.cloud.model.Image class with the 'date' and the 'created' properties. We need these extra properties to use this image type for the upgrade.
- Added CurrentImageRetrieverService to provide a com.sequenceiq.cloudbreak.cloud.model.Image object for the upgrade flow. This class is trying to retrieve the current image from the image catalog. If the image exists in the catalog then we're creating a com.sequenceiq.cloudbreak.cloud.model.Image object based on the image catalog. If the current image is not present in the image catalog then we're returning with the Image object from the database.
- Added ModelImageTestBuilder to help to create a com.sequenceiq.cloudbreak.cloud.model.Image object with builder pattern.
- Replaced the type of the current image in the whole upgrade flow from com.sequenceiq.cloudbreak.cloud.model.catalog.Image to com.sequenceiq.cloudbreak.cloud.model.Image